# AnticheatProxy

./: .gitignore  CMakeLists.txt  lines.sh
src/: anticheat_proxy.cc  anticheat_proxy.hh  globals.hh  main.cc  run_args.cc  run_args.hh
src/anticheat/: acp_player.cc  acp_player.hh
src/anticheat/alert/: alert.cc  alert.hh  alert_manager.cc  alert_manager.hh
src/anticheat/check/: check_manager.cc  check_manager.hh  i_check.cc  i_check.hh  i_interact_check.cc  i_interact_check.hh  i_inventory_check.hh  i_movement_check.cc  i_movement_check.hh
src/anticheat/check/interact/: reach.cc  reach.hh
src/anticheat/command/: connection_command.cc  connection_command.hh  help_command.cc  help_command.hh  reload_command.cc  reload_command.hh  stop_command.cc  stop_command.hh  version_command.cc  version_command.hh
src/command/: command_manager.cc  command_manager.hh  i_command.cc  i_command.hh  i_command_source.cc  i_command_source.hh
src/config/: alert_config.cc  alert_config.hh  config_macros.hh  config_manager.cc  config_manager.hh  i_config.cc  i_config.hh  network_config.cc  network_config.hh  profiler_config.cc  profiler_config.hh
src/game/entity/: entity.cc  entity.hh  entity_type.cc  entity_type.hh  living_entity.cc  living_entity.hh  player.cc  player.hh
src/game/entity/type/: entity_type.cc  entity_type.hh  entity_type_mapping.cc  entity_type_mapping.hh
src/game/item/: inventory.cc  inventory.hh  item_stack.hh  player_inventory.cc  player_inventory.hh
src/game/world/: chunk.cc  chunk.hh  chunk_key.cc  chunk_key.hh  world.cc  world.hh
src/network/: connection.cc  connection.hh  network_manager.cc  network_manager.hh  network_side.hh  ping_tracker.cc  ping_tracker.hh  plugin_messenger.cc  plugin_messenger.hh
src/network/handler/: configuration_handler.cc  configuration_handler.hh  handle_result.hh  handshake_handler.cc  handshake_handler.hh  i_network_handler.cc  i_network_handler.hh  login_handler.cc  login_handler.hh  play_handler.cc  play_handler.hh  status_handler.cc  status_handler.hh
src/network/protocol/: network_state.hh  protocol_mapping.cc  protocol_mapping.hh  protocol_version.cc  protocol_version.hh
src/network/protocol/packet/: i_packet.cc  i_packet.hh
src/network/protocol/packet/configuration/c2s/: acknowledge_finish_configuration.cc  acknowledge_finish_configuration.hh  client_information.cc  client_information.hh  cookie_response.cc  cookie_response.hh  keep_alive.cc  keep_alive.hh  known_packs.cc  known_packs.hh  plugin_message.cc  plugin_message.hh  pong.cc  pong.hh  resource_pack_response.hh
src/network/protocol/packet/configuration/s2c/: add_resource_pack.cc  add_resource_pack.hh  cookie_request.hh  custom_report_details.cc  custom_report_details.hh  disconnect.cc  disconnect.hh  feature_flags.cc  feature_flags.hh  finish_configuration.cc  finish_configuration.hh  keep_alive.hh  known_packs.cc  known_packs.hh  ping.hh  plugin_message.cc  plugin_message.hh  registry_data.cc  registry_data.hh  remove_resource_pack.cc  remove_resource_pack.hh  reset_chat.cc  reset_chat.hh  (+8 more)
src/network/protocol/packet/handshake/: handshake.cc  handshake.hh
src/network/protocol/packet/shared/: i_plugin_message.cc  i_plugin_message.hh
src/network/socket/: epoll_socket.cc  epoll_socket.hh  i_socket.cc  i_socket.hh  player_socket.cc  player_socket.hh  server_socket.cc  server_socket.hh
src/network/socket/exception/: socket_close_exception.cc  socket_close_exception.hh  socket_exception.cc  socket_exception.hh
src/permission/: permission.cc  permission.hh  permission_manager.cc  permission_manager.hh
src/util/: base_64.cc  base_64.hh  block_face.hh  bounding_box.hh  box_face.hh  color.hh  enum_names.hh  game_profile.cc  game_profile.hh  hash.cc  hash.hh  identifier.cc  identifier.hh  pid_file_lock.cc  pid_file_lock.hh  signal.cc  signal.hh  str_utils.cc  str_utils.hh  system.cc  system.hh  uuid.cc  uuid.hh  vec3.hh
src/util/command/: command_node.cc  command_node.hh
src/util/command/parser/: parser.cc  parser.hh  parser_mapping.cc  parser_mapping.hh
src/util/command/properties/: empty_properties.cc  empty_properties.hh  flags_properties.cc  flags_properties.hh  i_properties.cc  i_properties.hh  identifier_properties.cc  identifier_properties.hh  number_properties.cc  number_properties.hh  string_properties.cc  string_properties.hh  time_properties.cc  time_properties.hh
src/util/io/: byte_buf.cc  byte_buf.hh  i_serializable.hh  varint_exception.cc  varint_exception.hh  z_lib_exception.cc  z_lib_exception.hh
src/util/logger/: i_logger.hh  log_level.hh  logger.cc  logger.hh  root_logger.cc  root_logger.hh  sub_logger.cc  sub_logger.hh
src/util/nbt/: tag.cc  tag.hh  tag_type.hh
src/util/nbt/tag/: tag_compound.cc  tag_compound.hh  tag_end.cc  tag_end.hh  tag_list.cc  tag_list.hh  tag_number.cc  tag_number.hh  tag_number_array.cc  tag_number_array.hh  tag_string.cc  tag_string.hh
src/util/profiler/: profiler.cc  profiler.hh
src/util/raycast/: i_raycastable.cc  i_raycastable.hh  raycast_result.cc  raycast_result.hh
src/util/registry/: damage_type.cc  damage_type.hh  dimension_type.cc  dimension_type.hh
src/util/stacktrace/: stacktrace.cc  stacktrace.hh
src/util/terminal/: format.cc  format.hh  prompt.cc  prompt.hh  terminal_command_source.cc  terminal_command_source.hh
src/util/text/: component.cc  component.hh  keybind_component.cc  keybind_component.hh  text_component.cc  text_component.hh  translatable_component.cc  translatable_component.hh  type.cc  type.hh
src/util/text/io/: i_text_io.cc  i_text_io.hh  io_tag.cc  io_tag.hh
src/util/text/io/legacy/: legacy_io.cc  legacy_io.hh
src/util/text/io/minimessage/: minimessage_io.cc  minimessage_io.hh
src/util/text/io/plaintext/: plaintext_io.cc  plaintext_io.hh
src/util/text/io/terminal/: terminal_io.cc  terminal_io.hh
src/util/text/style/: click_event.cc  click_event.hh  hover_event.cc  hover_event.hh  style.cc  style.hh
src/util/thread/: thread_pool_executor.cc  thread_pool_executor.hh
src/util/velocity/: forwarding_info.cc  forwarding_info.hh  forwarding_version.hh
(+383 files in other folders)
