cmake_minimum_required(VERSION 3.30)
project(AnticheatProxy)

set(CMAKE_CXX_STANDARD 23)

add_executable(AnticheatProxy
	src/main.cc
	src/anticheat_proxy.cc
	src/anticheat_proxy.hh
	src/run_args.cc
	src/run_args.hh
	src/config/config_manager.cc
	src/config/config_manager.hh
	src/network/connection.cc
	src/network/connection.hh
	src/network/socket/i_socket.cc
	src/network/socket/i_socket.hh
	src/util/io/byte_buf.cc
	src/util/io/byte_buf.hh
	src/network/socket/server_socket.cc
	src/network/socket/server_socket.hh
	src/network/socket/exception/socket_exception.cc
	src/network/socket/exception/socket_exception.hh
	src/network/socket/player_socket.cc
	src/network/socket/player_socket.hh
	src/network/socket/exception/socket_close_exception.cc
	src/network/socket/exception/socket_close_exception.hh
	src/network/socket/epoll_socket.cc
	src/network/socket/epoll_socket.hh
	src/network/network_manager.cc
	src/network/network_manager.hh
	src/network/network_side.hh
	src/network/protocol/network_state.hh
	src/network/protocol/protocol_version.cc
	src/network/protocol/protocol_version.hh
	src/network/protocol/packet/i_packet.cc
	src/network/protocol/packet/i_packet.hh
	src/network/protocol/packet/status/s2c/status_response.cc
	src/network/protocol/packet/status/s2c/status_response.hh
	src/network/protocol/packet/status/s2c/ping_response.cc
	src/network/protocol/packet/status/s2c/ping_response.hh
	src/network/protocol/packet/status/c2s/status_request.cc
	src/network/protocol/packet/status/c2s/status_request.hh
	src/network/protocol/packet/status/c2s/ping_request.cc
	src/network/protocol/packet/status/c2s/ping_request.hh
	src/network/protocol/packet/handshake/handshake.cc
	src/network/protocol/packet/handshake/handshake.hh
	src/network/protocol/packet/login/s2c/disconnect.cc
	src/network/protocol/packet/login/s2c/disconnect.hh
	src/network/protocol/packet/login/s2c/encryption_request.cc
	src/network/protocol/packet/login/s2c/encryption_request.hh
	src/network/protocol/packet/login/s2c/login_success.cc
	src/network/protocol/packet/login/s2c/login_success.hh
	src/network/protocol/packet/login/s2c/set_compression.cc
	src/network/protocol/packet/login/s2c/set_compression.hh
	src/network/protocol/packet/login/s2c/login_plugin_request.cc
	src/network/protocol/packet/login/s2c/login_plugin_request.hh
	src/network/protocol/packet/login/s2c/cookie_request.cc
	src/network/protocol/packet/login/s2c/cookie_request.hh
	src/network/protocol/packet/login/c2s/login_start.cc
	src/network/protocol/packet/login/c2s/login_start.hh
	src/network/protocol/packet/login/c2s/encryption_response.cc
	src/network/protocol/packet/login/c2s/encryption_response.hh
	src/network/protocol/packet/login/c2s/login_plugin_response.cc
	src/network/protocol/packet/login/c2s/login_plugin_response.hh
	src/network/protocol/packet/login/c2s/login_acknowledged.cc
	src/network/protocol/packet/login/c2s/login_acknowledged.hh
	src/network/protocol/packet/login/c2s/cookie_response.cc
	src/network/protocol/packet/login/c2s/cookie_response.hh
	src/network/protocol/packet/configuration/s2c/cookie_request.cc
	src/network/protocol/packet/configuration/s2c/cookie_request.hh
	src/network/protocol/packet/configuration/s2c/plugin_message.cc
	src/network/protocol/packet/configuration/s2c/plugin_message.hh
	src/network/protocol/packet/configuration/s2c/disconnect.cc
	src/network/protocol/packet/configuration/s2c/disconnect.hh
	src/network/protocol/packet/configuration/s2c/finish_configuration.cc
	src/network/protocol/packet/configuration/s2c/finish_configuration.hh
	src/network/protocol/packet/configuration/s2c/keep_alive.cc
	src/network/protocol/packet/configuration/s2c/keep_alive.hh
	src/network/protocol/packet/configuration/s2c/ping.cc
	src/network/protocol/packet/configuration/s2c/ping.hh
	src/network/protocol/packet/configuration/s2c/reset_chat.cc
	src/network/protocol/packet/configuration/s2c/reset_chat.hh
	src/network/protocol/packet/configuration/s2c/registry_data.cc
	src/network/protocol/packet/configuration/s2c/registry_data.hh
	src/network/protocol/packet/configuration/s2c/remove_resource_pack.cc
	src/network/protocol/packet/configuration/s2c/remove_resource_pack.hh
	src/network/protocol/packet/configuration/s2c/add_resource_pack.cc
	src/network/protocol/packet/configuration/s2c/add_resource_pack.hh
	src/network/protocol/packet/configuration/s2c/store_cookie.cc
	src/network/protocol/packet/configuration/s2c/store_cookie.hh
	src/network/protocol/packet/configuration/s2c/transfer.cc
	src/network/protocol/packet/configuration/s2c/transfer.hh
	src/network/protocol/packet/configuration/s2c/feature_flags.cc
	src/network/protocol/packet/configuration/s2c/feature_flags.hh
	src/network/protocol/packet/configuration/s2c/update_tags.cc
	src/network/protocol/packet/configuration/s2c/update_tags.hh
	src/network/protocol/packet/configuration/s2c/known_packs.cc
	src/network/protocol/packet/configuration/s2c/known_packs.hh
	src/network/protocol/packet/configuration/s2c/custom_report_details.cc
	src/network/protocol/packet/configuration/s2c/custom_report_details.hh
	src/network/protocol/packet/configuration/s2c/server_links.cc
	src/network/protocol/packet/configuration/s2c/server_links.hh
	src/network/protocol/packet/configuration/c2s/client_information.cc
	src/network/protocol/packet/configuration/c2s/client_information.hh
	src/network/protocol/packet/configuration/c2s/cookie_response.cc
	src/network/protocol/packet/configuration/c2s/cookie_response.hh
	src/network/protocol/packet/configuration/c2s/plugin_message.cc
	src/network/protocol/packet/configuration/c2s/plugin_message.hh
	src/network/protocol/packet/configuration/c2s/acknowledge_finish_configuration.cc
	src/network/protocol/packet/configuration/c2s/acknowledge_finish_configuration.hh
	src/network/protocol/packet/configuration/c2s/keep_alive.cc
	src/network/protocol/packet/configuration/c2s/keep_alive.hh
	src/network/protocol/packet/configuration/c2s/pong.cc
	src/network/protocol/packet/configuration/c2s/pong.hh
	src/network/protocol/packet/configuration/c2s/resource_pack_response.cc
	src/network/protocol/packet/configuration/c2s/resource_pack_response.hh
	src/network/protocol/packet/configuration/c2s/known_packs.cc
	src/network/protocol/packet/configuration/c2s/known_packs.hh
	src/network/protocol/packet/play/s2c/bundle_delimiter.cc
	src/network/protocol/packet/play/s2c/bundle_delimiter.hh
	src/network/protocol/packet/play/s2c/spawn_entity.cc
	src/network/protocol/packet/play/s2c/spawn_entity.hh
	src/network/protocol/packet/play/s2c/spawn_experience_orb.cc
	src/network/protocol/packet/play/s2c/spawn_experience_orb.hh
	src/network/protocol/packet/play/s2c/entity_animation.cc
	src/network/protocol/packet/play/s2c/entity_animation.hh
	src/network/protocol/packet/play/s2c/award_statistics.cc
	src/network/protocol/packet/play/s2c/award_statistics.hh
	src/network/protocol/packet/play/s2c/acknowledge_block_change.cc
	src/network/protocol/packet/play/s2c/acknowledge_block_change.hh
	src/network/protocol/packet/play/s2c/set_block_destroy_stage.cc
	src/network/protocol/packet/play/s2c/set_block_destroy_stage.hh
	src/network/protocol/packet/play/s2c/block_entity_data.cc
	src/network/protocol/packet/play/s2c/block_entity_data.hh
	src/network/protocol/packet/play/s2c/block_action.cc
	src/network/protocol/packet/play/s2c/block_action.hh
	src/network/protocol/packet/play/s2c/block_update.cc
	src/network/protocol/packet/play/s2c/block_update.hh
	src/network/protocol/packet/play/s2c/boss_bar.cc
	src/network/protocol/packet/play/s2c/boss_bar.hh
	src/network/protocol/packet/play/s2c/change_difficulty.cc
	src/network/protocol/packet/play/s2c/change_difficulty.hh
	src/network/protocol/packet/play/s2c/chunk_batch_finished.cc
	src/network/protocol/packet/play/s2c/chunk_batch_finished.hh
	src/network/protocol/packet/play/s2c/chunk_batch_start.cc
	src/network/protocol/packet/play/s2c/chunk_batch_start.hh
	src/network/protocol/packet/play/s2c/chunk_biomes.cc
	src/network/protocol/packet/play/s2c/chunk_biomes.hh
	src/network/protocol/packet/play/s2c/clear_titles.cc
	src/network/protocol/packet/play/s2c/clear_titles.hh
	src/network/protocol/packet/play/s2c/command_suggestions_response.cc
	src/network/protocol/packet/play/s2c/command_suggestions_response.hh
	src/network/protocol/packet/play/s2c/commands.cc
	src/network/protocol/packet/play/s2c/commands.hh
	src/network/protocol/packet/play/s2c/close_container.cc
	src/network/protocol/packet/play/s2c/close_container.hh
	src/network/protocol/packet/play/s2c/set_container_content.cc
	src/network/protocol/packet/play/s2c/set_container_content.hh
	src/network/protocol/packet/play/s2c/set_container_property.cc
	src/network/protocol/packet/play/s2c/set_container_property.hh
	src/network/protocol/packet/play/s2c/set_container_slot.cc
	src/network/protocol/packet/play/s2c/set_container_slot.hh
	src/network/protocol/packet/play/s2c/cookie_request.cc
	src/network/protocol/packet/play/s2c/cookie_request.hh
	src/network/protocol/packet/play/s2c/set_cooldown.cc
	src/network/protocol/packet/play/s2c/set_cooldown.hh
	src/network/protocol/packet/play/s2c/chat_suggestions.cc
	src/network/protocol/packet/play/s2c/chat_suggestions.hh
	src/network/protocol/packet/play/s2c/plugin_message.cc
	src/network/protocol/packet/play/s2c/plugin_message.hh
	src/network/protocol/packet/play/s2c/damage_event.cc
	src/network/protocol/packet/play/s2c/damage_event.hh
	src/network/protocol/packet/play/s2c/debug_sample.cc
	src/network/protocol/packet/play/s2c/debug_sample.hh
	src/network/protocol/packet/play/s2c/delete_message.cc
	src/network/protocol/packet/play/s2c/delete_message.hh
	src/network/protocol/packet/play/s2c/disconnect.cc
	src/network/protocol/packet/play/s2c/disconnect.hh
	src/network/protocol/packet/play/s2c/disguised_chat_message.cc
	src/network/protocol/packet/play/s2c/disguised_chat_message.hh
	src/network/protocol/packet/play/s2c/entity_event.cc
	src/network/protocol/packet/play/s2c/entity_event.hh
	src/network/protocol/packet/play/s2c/explosion.cc
	src/network/protocol/packet/play/s2c/explosion.hh
	src/network/protocol/packet/play/s2c/unload_chunk.cc
	src/network/protocol/packet/play/s2c/unload_chunk.hh
	src/network/protocol/packet/play/s2c/game_event.cc
	src/network/protocol/packet/play/s2c/game_event.hh
	src/network/protocol/packet/play/s2c/open_horse_screen.cc
	src/network/protocol/packet/play/s2c/open_horse_screen.hh
	src/network/protocol/packet/play/s2c/hurt_animation.cc
	src/network/protocol/packet/play/s2c/hurt_animation.hh
	src/network/protocol/packet/play/s2c/initialize_world_border.cc
	src/network/protocol/packet/play/s2c/initialize_world_border.hh
	src/network/protocol/packet/play/s2c/keep_alive.cc
	src/network/protocol/packet/play/s2c/keep_alive.hh
	src/network/protocol/packet/play/s2c/chunk_data_and_update_light.cc
	src/network/protocol/packet/play/s2c/chunk_data_and_update_light.hh
	src/network/protocol/packet/play/s2c/world_event.cc
	src/network/protocol/packet/play/s2c/world_event.hh
	src/network/protocol/packet/play/s2c/particle.cc
	src/network/protocol/packet/play/s2c/particle.hh
	src/network/protocol/packet/play/s2c/update_light.cc
	src/network/protocol/packet/play/s2c/update_light.hh
	src/network/protocol/packet/play/s2c/login.cc
	src/network/protocol/packet/play/s2c/login.hh
	src/network/protocol/packet/play/s2c/map_data.cc
	src/network/protocol/packet/play/s2c/map_data.hh
	src/network/protocol/packet/play/s2c/merchant_offers.cc
	src/network/protocol/packet/play/s2c/merchant_offers.hh
	src/network/protocol/packet/play/s2c/update_entity_position.cc
	src/network/protocol/packet/play/s2c/update_entity_position.hh
	src/network/protocol/packet/play/s2c/update_entity_position_rotation.cc
	src/network/protocol/packet/play/s2c/update_entity_position_rotation.hh
	src/network/protocol/packet/play/s2c/update_entity_rotation.cc
	src/network/protocol/packet/play/s2c/update_entity_rotation.hh
	src/network/protocol/packet/play/s2c/move_vehicle.cc
	src/network/protocol/packet/play/s2c/move_vehicle.hh
	src/network/protocol/packet/play/s2c/open_book.cc
	src/network/protocol/packet/play/s2c/open_book.hh
	src/network/protocol/packet/play/s2c/open_screen.cc
	src/network/protocol/packet/play/s2c/open_screen.hh
	src/network/protocol/packet/play/s2c/open_sign_editor.cc
	src/network/protocol/packet/play/s2c/open_sign_editor.hh
	src/network/protocol/packet/play/s2c/ping.cc
	src/network/protocol/packet/play/s2c/ping.hh
	src/network/protocol/packet/play/s2c/ping_response.cc
	src/network/protocol/packet/play/s2c/ping_response.hh
	src/network/protocol/packet/play/s2c/place_ghost_recipe.cc
	src/network/protocol/packet/play/s2c/place_ghost_recipe.hh
	src/network/protocol/packet/play/s2c/player_abilities.cc
	src/network/protocol/packet/play/s2c/player_abilities.hh
	src/network/protocol/packet/play/s2c/player_chat_message.cc
	src/network/protocol/packet/play/s2c/player_chat_message.hh
	src/network/protocol/packet/play/s2c/end_combat.cc
	src/network/protocol/packet/play/s2c/end_combat.hh
	src/network/protocol/packet/play/s2c/enter_combat.cc
	src/network/protocol/packet/play/s2c/enter_combat.hh
	src/network/protocol/packet/play/s2c/combat_death.cc
	src/network/protocol/packet/play/s2c/combat_death.hh
	src/network/protocol/packet/play/s2c/player_info_remove.cc
	src/network/protocol/packet/play/s2c/player_info_remove.hh
	src/network/protocol/packet/play/s2c/player_info_update.cc
	src/network/protocol/packet/play/s2c/player_info_update.hh
	src/network/protocol/packet/play/s2c/look_at.cc
	src/network/protocol/packet/play/s2c/look_at.hh
	src/network/protocol/packet/play/s2c/synchronize_player_position.cc
	src/network/protocol/packet/play/s2c/synchronize_player_position.hh
	src/network/protocol/packet/play/s2c/update_recipe_book.cc
	src/network/protocol/packet/play/s2c/update_recipe_book.hh
	src/network/protocol/packet/play/s2c/remove_entities.cc
	src/network/protocol/packet/play/s2c/remove_entities.hh
	src/network/protocol/packet/play/s2c/remove_entity_effect.cc
	src/network/protocol/packet/play/s2c/remove_entity_effect.hh
	src/network/protocol/packet/play/s2c/reset_score.cc
	src/network/protocol/packet/play/s2c/reset_score.hh
	src/network/protocol/packet/play/s2c/remove_resource_pack.cc
	src/network/protocol/packet/play/s2c/remove_resource_pack.hh
	src/network/protocol/packet/play/s2c/add_resource_pack.cc
	src/network/protocol/packet/play/s2c/add_resource_pack.hh
	src/network/protocol/packet/play/s2c/respawn.cc
	src/network/protocol/packet/play/s2c/respawn.hh
	src/network/protocol/packet/play/s2c/set_head_rotation.cc
	src/network/protocol/packet/play/s2c/set_head_rotation.hh
	src/network/protocol/packet/play/s2c/update_section_blocks.cc
	src/network/protocol/packet/play/s2c/update_section_blocks.hh
	src/network/protocol/packet/play/s2c/select_advancements_tab.cc
	src/network/protocol/packet/play/s2c/select_advancements_tab.hh
	src/network/protocol/packet/play/s2c/server_data.cc
	src/network/protocol/packet/play/s2c/server_data.hh
	src/network/protocol/packet/play/s2c/set_action_bar_text.cc
	src/network/protocol/packet/play/s2c/set_action_bar_text.hh
	src/network/protocol/packet/play/s2c/set_border_center.cc
	src/network/protocol/packet/play/s2c/set_border_center.hh
	src/network/protocol/packet/play/s2c/set_border_lerp_size.cc
	src/network/protocol/packet/play/s2c/set_border_lerp_size.hh
	src/network/protocol/packet/play/s2c/set_border_size.cc
	src/network/protocol/packet/play/s2c/set_border_size.hh
	src/network/protocol/packet/play/s2c/set_border_warning_delay.cc
	src/network/protocol/packet/play/s2c/set_border_warning_delay.hh
	src/network/protocol/packet/play/s2c/set_border_warning_distance.cc
	src/network/protocol/packet/play/s2c/set_border_warning_distance.hh
	src/network/protocol/packet/play/s2c/set_camera.cc
	src/network/protocol/packet/play/s2c/set_camera.hh
	src/network/protocol/packet/play/s2c/set_held_item.cc
	src/network/protocol/packet/play/s2c/set_held_item.hh
	src/network/protocol/packet/play/s2c/set_center_chunk.cc
	src/network/protocol/packet/play/s2c/set_center_chunk.hh
	src/network/protocol/packet/play/s2c/set_render_distance.cc
	src/network/protocol/packet/play/s2c/set_render_distance.hh
	src/network/protocol/packet/play/s2c/set_default_spawn_position.cc
	src/network/protocol/packet/play/s2c/set_default_spawn_position.hh
	src/network/protocol/packet/play/s2c/display_objective.cc
	src/network/protocol/packet/play/s2c/display_objective.hh
	src/network/protocol/packet/play/s2c/set_entity_metadata.cc
	src/network/protocol/packet/play/s2c/set_entity_metadata.hh
	src/network/protocol/packet/play/s2c/link_entities.cc
	src/network/protocol/packet/play/s2c/link_entities.hh
	src/network/protocol/packet/play/s2c/set_entity_velocity.cc
	src/network/protocol/packet/play/s2c/set_entity_velocity.hh
	src/network/protocol/packet/play/s2c/set_equipment.cc
	src/network/protocol/packet/play/s2c/set_equipment.hh
	src/network/protocol/packet/play/s2c/set_experience.cc
	src/network/protocol/packet/play/s2c/set_experience.hh
	src/network/protocol/packet/play/s2c/set_health.cc
	src/network/protocol/packet/play/s2c/set_health.hh
	src/network/protocol/packet/play/s2c/update_objectives.cc
	src/network/protocol/packet/play/s2c/update_objectives.hh
	src/network/protocol/packet/play/s2c/set_passengers.cc
	src/network/protocol/packet/play/s2c/set_passengers.hh
	src/network/protocol/packet/play/s2c/update_teams.cc
	src/network/protocol/packet/play/s2c/update_teams.hh
	src/network/protocol/packet/play/s2c/update_score.cc
	src/network/protocol/packet/play/s2c/update_score.hh
	src/network/protocol/packet/play/s2c/set_simulation_distance.cc
	src/network/protocol/packet/play/s2c/set_simulation_distance.hh
	src/network/protocol/packet/play/s2c/set_subtitle_text.cc
	src/network/protocol/packet/play/s2c/set_subtitle_text.hh
	src/network/protocol/packet/play/s2c/update_time.cc
	src/network/protocol/packet/play/s2c/update_time.hh
	src/network/protocol/packet/play/s2c/set_title_text.cc
	src/network/protocol/packet/play/s2c/set_title_text.hh
	src/network/protocol/packet/play/s2c/set_title_animation_times.cc
	src/network/protocol/packet/play/s2c/set_title_animation_times.hh
	src/network/protocol/packet/play/s2c/entity_sound_effect.cc
	src/network/protocol/packet/play/s2c/entity_sound_effect.hh
	src/network/protocol/packet/play/s2c/sound_effect.cc
	src/network/protocol/packet/play/s2c/sound_effect.hh
	src/network/protocol/packet/play/s2c/start_configuration.cc
	src/network/protocol/packet/play/s2c/start_configuration.hh
	src/network/protocol/packet/play/s2c/stop_sound.cc
	src/network/protocol/packet/play/s2c/stop_sound.hh
	src/network/protocol/packet/play/s2c/store_cookie.cc
	src/network/protocol/packet/play/s2c/store_cookie.hh
	src/network/protocol/packet/play/s2c/system_chat_message.cc
	src/network/protocol/packet/play/s2c/system_chat_message.hh
	src/network/protocol/packet/play/s2c/set_tab_list_header_and_footer.cc
	src/network/protocol/packet/play/s2c/set_tab_list_header_and_footer.hh
	src/network/protocol/packet/play/s2c/tag_query_response.cc
	src/network/protocol/packet/play/s2c/tag_query_response.hh
	src/network/protocol/packet/play/s2c/pickup_item.cc
	src/network/protocol/packet/play/s2c/pickup_item.hh
	src/network/protocol/packet/play/s2c/teleport_entity.cc
	src/network/protocol/packet/play/s2c/teleport_entity.hh
	src/network/protocol/packet/play/s2c/set_ticking_state.cc
	src/network/protocol/packet/play/s2c/set_ticking_state.hh
	src/network/protocol/packet/play/s2c/step_tick.cc
	src/network/protocol/packet/play/s2c/step_tick.hh
	src/network/protocol/packet/play/s2c/transfer.cc
	src/network/protocol/packet/play/s2c/transfer.hh
	src/network/protocol/packet/play/s2c/update_advancements.cc
	src/network/protocol/packet/play/s2c/update_advancements.hh
	src/network/protocol/packet/play/s2c/update_attributes.cc
	src/network/protocol/packet/play/s2c/update_attributes.hh
	src/network/protocol/packet/play/s2c/entity_effect.cc
	src/network/protocol/packet/play/s2c/entity_effect.hh
	src/network/protocol/packet/play/s2c/update_recipes.cc
	src/network/protocol/packet/play/s2c/update_recipes.hh
	src/network/protocol/packet/play/s2c/update_tags.cc
	src/network/protocol/packet/play/s2c/update_tags.hh
	src/network/protocol/packet/play/s2c/projectile_power.cc
	src/network/protocol/packet/play/s2c/projectile_power.hh
	src/network/protocol/packet/play/s2c/custom_report_details.cc
	src/network/protocol/packet/play/s2c/custom_report_details.hh
	src/network/protocol/packet/play/s2c/server_links.cc
	src/network/protocol/packet/play/s2c/server_links.hh
	src/network/protocol/packet/play/c2s/confirm_teleportation.cc
	src/network/protocol/packet/play/c2s/confirm_teleportation.hh
	src/network/protocol/packet/play/c2s/query_block_entity_tag.cc
	src/network/protocol/packet/play/c2s/query_block_entity_tag.hh
	src/network/protocol/packet/play/c2s/change_difficulty.cc
	src/network/protocol/packet/play/c2s/change_difficulty.hh
	src/network/protocol/packet/play/c2s/acknowledge_message.cc
	src/network/protocol/packet/play/c2s/acknowledge_message.hh
	src/network/protocol/packet/play/c2s/chat_command.cc
	src/network/protocol/packet/play/c2s/chat_command.hh
	src/network/protocol/packet/play/c2s/signed_chat_command.cc
	src/network/protocol/packet/play/c2s/signed_chat_command.hh
	src/network/protocol/packet/play/c2s/chat_message.cc
	src/network/protocol/packet/play/c2s/chat_message.hh
	src/network/protocol/packet/play/c2s/player_session.cc
	src/network/protocol/packet/play/c2s/player_session.hh
	src/network/protocol/packet/play/c2s/chunk_batch_received.cc
	src/network/protocol/packet/play/c2s/chunk_batch_received.hh
	src/network/protocol/packet/play/c2s/client_status.cc
	src/network/protocol/packet/play/c2s/client_status.hh
	src/network/protocol/packet/play/c2s/client_information.cc
	src/network/protocol/packet/play/c2s/client_information.hh
	src/network/protocol/packet/play/c2s/command_suggestions_request.cc
	src/network/protocol/packet/play/c2s/command_suggestions_request.hh
	src/network/protocol/packet/play/c2s/acknowledge_configuration.cc
	src/network/protocol/packet/play/c2s/acknowledge_configuration.hh
	src/network/protocol/packet/play/c2s/click_container_button.cc
	src/network/protocol/packet/play/c2s/click_container_button.hh
	src/network/protocol/packet/play/c2s/click_container.cc
	src/network/protocol/packet/play/c2s/click_container.hh
	src/network/protocol/packet/play/c2s/close_container.cc
	src/network/protocol/packet/play/c2s/close_container.hh
	src/network/protocol/packet/play/c2s/change_container_slot_state.cc
	src/network/protocol/packet/play/c2s/change_container_slot_state.hh
	src/network/protocol/packet/play/c2s/cookie_response.cc
	src/network/protocol/packet/play/c2s/cookie_response.hh
	src/network/protocol/packet/play/c2s/plugin_message.cc
	src/network/protocol/packet/play/c2s/plugin_message.hh
	src/network/protocol/packet/play/c2s/debug_sample_subscription.cc
	src/network/protocol/packet/play/c2s/debug_sample_subscription.hh
	src/network/protocol/packet/play/c2s/edit_book.cc
	src/network/protocol/packet/play/c2s/edit_book.hh
	src/network/protocol/packet/play/c2s/query_entity_tag.cc
	src/network/protocol/packet/play/c2s/query_entity_tag.hh
	src/network/protocol/packet/play/c2s/interact.cc
	src/network/protocol/packet/play/c2s/interact.hh
	src/network/protocol/packet/play/c2s/jigsaw_generate.cc
	src/network/protocol/packet/play/c2s/jigsaw_generate.hh
	src/network/protocol/packet/play/c2s/keep_alive.cc
	src/network/protocol/packet/play/c2s/keep_alive.hh
	src/network/protocol/packet/play/c2s/lock_difficulty.cc
	src/network/protocol/packet/play/c2s/lock_difficulty.hh
	src/network/protocol/packet/play/c2s/set_player_position.cc
	src/network/protocol/packet/play/c2s/set_player_position.hh
	src/network/protocol/packet/play/c2s/set_player_position_rotation.cc
	src/network/protocol/packet/play/c2s/set_player_position_rotation.hh
	src/network/protocol/packet/play/c2s/set_player_rotation.cc
	src/network/protocol/packet/play/c2s/set_player_rotation.hh
	src/network/protocol/packet/play/c2s/set_player_on_ground.cc
	src/network/protocol/packet/play/c2s/set_player_on_ground.hh
	src/network/protocol/packet/play/c2s/move_vehicle.cc
	src/network/protocol/packet/play/c2s/move_vehicle.hh
	src/network/protocol/packet/play/c2s/paddle_boat.cc
	src/network/protocol/packet/play/c2s/paddle_boat.hh
	src/network/protocol/packet/play/c2s/pick_item.cc
	src/network/protocol/packet/play/c2s/pick_item.hh
	src/network/protocol/packet/play/c2s/ping_request.cc
	src/network/protocol/packet/play/c2s/ping_request.hh
	src/network/protocol/packet/play/c2s/place_recipe.cc
	src/network/protocol/packet/play/c2s/place_recipe.hh
	src/network/protocol/packet/play/c2s/player_abilities.cc
	src/network/protocol/packet/play/c2s/player_abilities.hh
	src/network/protocol/packet/play/c2s/player_action.cc
	src/network/protocol/packet/play/c2s/player_action.hh
	src/network/protocol/packet/play/c2s/player_command.cc
	src/network/protocol/packet/play/c2s/player_command.hh
	src/network/protocol/packet/play/c2s/player_input.cc
	src/network/protocol/packet/play/c2s/player_input.hh
	src/network/protocol/packet/play/c2s/pong.cc
	src/network/protocol/packet/play/c2s/pong.hh
	src/network/protocol/packet/play/c2s/change_recipe_book_settings.cc
	src/network/protocol/packet/play/c2s/change_recipe_book_settings.hh
	src/network/protocol/packet/play/c2s/set_seen_recipe.cc
	src/network/protocol/packet/play/c2s/set_seen_recipe.hh
	src/network/protocol/packet/play/c2s/rename_item.cc
	src/network/protocol/packet/play/c2s/rename_item.hh
	src/network/protocol/packet/play/c2s/resource_pack_response.cc
	src/network/protocol/packet/play/c2s/resource_pack_response.hh
	src/network/protocol/packet/play/c2s/seen_advancements.cc
	src/network/protocol/packet/play/c2s/seen_advancements.hh
	src/network/protocol/packet/play/c2s/select_trade.cc
	src/network/protocol/packet/play/c2s/select_trade.hh
	src/network/protocol/packet/play/c2s/set_beacon_effect.cc
	src/network/protocol/packet/play/c2s/set_beacon_effect.hh
	src/network/protocol/packet/play/c2s/set_held_item.cc
	src/network/protocol/packet/play/c2s/set_held_item.hh
	src/network/protocol/packet/play/c2s/program_command_block.cc
	src/network/protocol/packet/play/c2s/program_command_block.hh
	src/network/protocol/packet/play/c2s/program_command_block_minecart.cc
	src/network/protocol/packet/play/c2s/program_command_block_minecart.hh
	src/network/protocol/packet/play/c2s/set_creative_mode_slot.cc
	src/network/protocol/packet/play/c2s/set_creative_mode_slot.hh
	src/network/protocol/packet/play/c2s/program_jigsaw_block.cc
	src/network/protocol/packet/play/c2s/program_jigsaw_block.hh
	src/network/protocol/packet/play/c2s/program_structure_block.cc
	src/network/protocol/packet/play/c2s/program_structure_block.hh
	src/network/protocol/packet/play/c2s/update_sign.cc
	src/network/protocol/packet/play/c2s/update_sign.hh
	src/network/protocol/packet/play/c2s/swing_arm.cc
	src/network/protocol/packet/play/c2s/swing_arm.hh
	src/network/protocol/packet/play/c2s/teleport_to_entity.cc
	src/network/protocol/packet/play/c2s/teleport_to_entity.hh
	src/network/protocol/packet/play/c2s/use_item_on.cc
	src/network/protocol/packet/play/c2s/use_item_on.hh
	src/network/protocol/packet/play/c2s/use_item.cc
	src/network/protocol/packet/play/c2s/use_item.hh
	src/permission/permission_manager.cc
	src/permission/permission_manager.hh
	src/permission/permission.cc
	src/permission/permission.hh
	src/globals.hh
	src/network/handler/i_network_handler.cc
	src/network/handler/i_network_handler.hh
	src/network/handler/handshake_handler.cc
	src/network/handler/handshake_handler.hh
	src/network/handler/status_handler.cc
	src/network/handler/status_handler.hh
	src/network/handler/login_handler.cc
	src/network/handler/login_handler.hh
	src/network/handler/configuration_handler.cc
	src/network/handler/configuration_handler.hh
	src/network/handler/play_handler.cc
	src/network/handler/play_handler.hh
	src/util/enum_names.hh
	src/util/uuid.cc
	src/util/uuid.hh
	src/util/types.hh
	src/util/hash.cc
	src/util/hash.hh
	src/util/base_64.cc
	src/util/base_64.hh
	src/util/io/varint_exception.cc
	src/util/io/varint_exception.hh
	src/util/identifier.cc
	src/util/identifier.hh
	src/util/io/z_lib_exception.cc
	src/util/io/z_lib_exception.hh
	src/network/protocol/protocol_mapping.cc
	src/network/protocol/protocol_mapping.hh
	src/util/logger/i_logger.hh
	src/util/logger/log_level.hh
	src/util/thread/thread_pool_executor.cc
	src/util/thread/thread_pool_executor.hh
	src/util/vec3.hh
	src/util/nbt/tag_type.hh
	src/util/nbt/tag.cc
	src/util/nbt/tag.hh
	src/util/nbt/tag/tag_end.cc
	src/util/nbt/tag/tag_end.hh
	src/util/nbt/tag/tag_string.cc
	src/util/nbt/tag/tag_string.hh
	src/util/nbt/tag/tag_list.cc
	src/util/nbt/tag/tag_list.hh
	src/util/nbt/tag/tag_compound.cc
	src/util/nbt/tag/tag_compound.hh
	src/util/nbt/tag/tag_number.cc
	src/util/nbt/tag/tag_number.hh
	src/util/nbt/tag/tag_number_array.cc
	src/util/nbt/tag/tag_number_array.hh
	src/network/handler/handle_result.hh
	src/config/i_config.cc
	src/config/i_config.hh
	src/config/network_config.cc
	src/config/network_config.hh
	src/config/config_macros.hh
	src/util/text/type.cc
	src/util/text/type.hh
	src/util/text/style/style.cc
	src/util/text/style/style.hh
	src/util/text/style/click_event.cc
	src/util/text/style/click_event.hh
	src/util/text/style/hover_event.cc
	src/util/text/style/hover_event.hh
	src/util/text/component.cc
	src/util/text/component.hh
	src/util/text/text_component.cc
	src/util/text/text_component.hh
	src/util/text/translatable_component.cc
	src/util/text/translatable_component.hh
	src/util/text/keybind_component.cc
	src/util/text/keybind_component.hh
	src/util/io/i_serializable.hh
	src/util/pid_file_lock.cc
	src/util/pid_file_lock.hh
	src/util/game_profile.cc
	src/util/game_profile.hh
	src/util/velocity/forwarding_version.hh
	src/util/velocity/forwarding_info.cc
	src/util/velocity/forwarding_info.hh
	src/util/color.hh
	src/util/terminal/format.cc
	src/util/terminal/format.hh
	src/util/signal.cc
	src/util/signal.hh
	src/util/bounding_box.hh
	src/util/logger/root_logger.cc
	src/util/logger/root_logger.hh
	src/util/logger/sub_logger.cc
	src/util/logger/sub_logger.hh
	src/util/terminal/prompt.cc
	src/util/terminal/prompt.hh
	src/game/entity/entity.cc
	src/game/entity/entity.hh
	src/game/entity/living_entity.cc
	src/game/entity/living_entity.hh
	src/game/entity/player.cc
	src/game/entity/player.hh
	src/anticheat/acp_player.cc
	src/anticheat/acp_player.hh
	src/util/command/command_node.cc
	src/util/command/command_node.hh
	src/util/command/properties/i_properties.cc
	src/util/command/properties/i_properties.hh
	src/util/command/properties/empty_properties.cc
	src/util/command/properties/empty_properties.hh
	src/util/command/properties/number_properties.cc
	src/util/command/properties/number_properties.hh
	src/util/command/properties/string_properties.cc
	src/util/command/properties/string_properties.hh
	src/util/command/properties/flags_properties.cc
	src/util/command/properties/flags_properties.hh
	src/util/command/properties/time_properties.cc
	src/util/command/properties/time_properties.hh
	src/util/command/properties/identifier_properties.cc
	src/util/command/properties/identifier_properties.hh
	src/game/item/item_stack.cc
	src/game/item/item_stack.hh
	src/game/item/inventory.cc
	src/game/item/inventory.hh
	src/game/item/player_inventory.cc
	src/game/item/player_inventory.hh
	src/game/world/world.cc
	src/game/world/world.hh
	src/game/world/chunk.cc
	src/game/world/chunk.hh
	src/game/world/chunk_key.cc
	src/game/world/chunk_key.hh
	src/util/registry/dimension_type.cc
	src/util/registry/dimension_type.hh
	src/anticheat/check/i_check.cc
	src/anticheat/check/i_check.hh
	src/anticheat/check/check_manager.cc
	src/anticheat/check/check_manager.hh
	src/anticheat/check/i_movement_check.hh
	src/anticheat/check/i_interact_check.hh
	src/anticheat/check/i_inventory_check.hh
	src/anticheat/check/interact/reach.cc
	src/anticheat/check/interact/reach.hh
	src/game/entity/type/entity_type.cc
	src/game/entity/type/entity_type.hh
	src/game/entity/type/entity_type_mapping.cc
	src/game/entity/type/entity_type_mapping.hh
	src/util/profiler/profiler.cc
	src/util/profiler/profiler.hh
	src/util/raycast/i_raycastable.cc
	src/util/raycast/i_raycastable.hh
	src/util/raycast/raycast_result.cc
	src/util/raycast/raycast_result.hh
	src/util/command/parser/parser.cc
	src/util/command/parser/parser.hh
	src/util/command/parser/parser_mapping.cc
	src/util/command/parser/parser_mapping.hh
	src/util/box_face.hh
	src/command/command_manager.cc
	src/command/command_manager.hh
	src/command/i_command.cc
	src/command/i_command.hh
	src/command/i_command_source.hh
	src/anticheat/alert/alert_manager.cc
	src/anticheat/alert/alert_manager.hh
	src/anticheat/alert/alert.cc
	src/anticheat/alert/alert.hh
	src/config/alert_config.cc
	src/config/alert_config.hh
)

find_package(OpenSSL REQUIRED)
target_link_libraries(AnticheatProxy OpenSSL::Crypto)

find_package(ZLIB REQUIRED)
target_link_libraries(AnticheatProxy ZLIB::ZLIB)

target_include_directories(AnticheatProxy PRIVATE src/)
